# uniffi-dart

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  refactor.md  uniffi-async-impl-iterations.txt
.github/workflows/: tests.yml
experiments/: ReadMe.md
experiments/callbacks-b341dcefe6788477/: callbacks.dart  fixture_callbacks.kt  fixture_callbacks.py  libcallbacks-old.dylib  libcallbacks.dylib  pubspec.yaml
experiments/callbacks-b341dcefe6788477/.dart_tool/: package_config.json
experiments/callbacks-b341dcefe6788477/.dart_tool/extension_discovery/: devtools.json
experiments/callbacks-b341dcefe6788477/.dart_tool/test/: incremental_kernel.Ly9AZGFydD0yLjE5  incremental_kernel.Ly9AZGFydD0zLjU=
experiments/callbacks-b341dcefe6788477/test/: callbacks_test.dart
fixtures/arithmetic/: Cargo.toml
fixtures/arithmetic/src/: api.udl  lib.rs
fixtures/arithmetic/test/: simple_arithmetic_test.dart
fixtures/arithmetic/tests/: mod.rs
fixtures/bytes_example/: Cargo.toml
fixtures/bytes_example/src/: api.udl  lib.rs
fixtures/bytes_example/test/: bytes_example.dart
fixtures/bytes_example/tests/: mod.rs
fixtures/callbacks/: Cargo.toml
fixtures/callbacks/src/: api.udl  lib.rs
fixtures/callbacks/test/: callbacks_test.dart
fixtures/callbacks/tests/: mod.rs
fixtures/chronological/: Cargo.toml
fixtures/chronological/src/: api.udl
fixtures/chronological/test/: chronological_test.dart
fixtures/chronological/tests/: mod.rs
fixtures/coverall/: Cargo.toml
fixtures/coverall/src/: api.udl  lib.rs
fixtures/coverall/test/: coverall_test.dart
fixtures/coverall/tests/: mod.rs
fixtures/custom_error/: Cargo.toml
fixtures/custom_error/src/: api.udl  lib.rs
fixtures/custom_error/test/: custom_errror_test.dart
fixtures/custom_error/tests/: mod.rs
fixtures/custom_types/: Cargo.toml  build.rs
fixtures/custom_types/src/: api.udl  lib.rs
fixtures/custom_types/test/: custom_types_test.dart
fixtures/custom_types/tests/: mod.rs
fixtures/dart_async/: Cargo.toml
fixtures/dart_async/src/: api.udl
fixtures/dart_async/test/: futures_test.dart
fixtures/dart_async/tests/: mod.rs
fixtures/dispose/: Cargo.toml  build.rs
fixtures/dispose/src/: api.udl  lib.rs
fixtures/dispose/test/: dispose_test.dart
fixtures/dispose/tests/: mod.rs
fixtures/duration_type_test/: Cargo.toml
fixtures/duration_type_test/src/: api.udl  lib.rs
fixtures/duration_type_test/test/: duration_type_test.dart
fixtures/duration_type_test/tests/: mod.rs
fixtures/error_types/: Cargo.toml
fixtures/error_types/src/: api.udl  lib.rs
fixtures/error_types/test/: error_types_test.dart
fixtures/error_types/tests/: mod.rs
fixtures/ext-types/: Cargo.toml
fixtures/ext-types/src/: api.udl  lib.rs
fixtures/ext-types/test/: ext_types_test.dart
fixtures/ext-types/tests/: mod.rs
fixtures/fixture_callbacks/: Cargo.toml
fixtures/fixture_callbacks/src/: api.udl  lib.rs
fixtures/fixture_callbacks/test/: fixture_callbacks_test.dart
fixtures/fixture_callbacks/tests/: mod.rs
fixtures/futures/: Cargo.toml
fixtures/futures/src/: api.udl  lib.rs
fixtures/futures/test/: futures_test.dart
fixtures/futures/tests/: mod.rs
fixtures/hello_world/: Cargo.toml  build.rs
fixtures/hello_world/dart-tests/: hello_world_test.dart
fixtures/hello_world/src/: api.udl  lib.rs
fixtures/hello_world/test/: hello_world_test.dart
fixtures/hello_world/tests/: mod.rs
fixtures/large_enum/: Cargo.toml
fixtures/large_enum/src/: api.udl  lib.rs
fixtures/large_enum/test/: large_enum_test.dart
fixtures/large_enum/tests/: mod.rs
fixtures/streams_ext/: Cargo.toml
fixtures/streams_ext/src/: api copy.udl  api.udl  lib.rs
fixtures/streams_ext/test/: strems_ext_test.dart
fixtures/streams_ext/tests/: mod.rs
src/: bin.rs  build.rs  gen-forgetten.rs  gen.rs  lib.rs  testing.rs
uniffi_dart_macro/: Cargo.toml
uniffi_dart_macro/src/: lib.rs
