[package]
name = "uniffi-dart"
version = "0.1.0"
edition = "2021"
license = "Apache-2 or MIT"
homepage = "https://github.com/acterglobal/uniffi-dart"
description = "Dart Frontend for UniFFI"

[features]
defaults = []
binary = []
build = ["dep:uniffi_build"]
bindgen-tests = [
    "dep:uniffi_testing",
    "dep:camino-tempfile",
    "dep:fs_extra",
    "dep:glob",
]

[lib]
name = "uniffi_dart"
path = "src/lib.rs"

[[bin]]
name = "uniffi_bindgen_dart"
path = "src/bin.rs"
required-features = ["binary"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
proc-macro2 = "1.0.66"

[dependencies]
anyhow = "1"
paste = "1"
heck = "0.4.1"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "8565b7f941e7967778efd39c5ab27551dfa23ec6", features = [
    "build",
] }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs", rev = "8565b7f941e7967778efd39c5ab27551dfa23ec6" }
camino = "1"
serde = "1"
toml = "0.5"
genco = "0.17.5"

# feature specific stuff
uniffi_build = { git = "https://github.com/mozilla/uniffi-rs", rev = "8565b7f941e7967778efd39c5ab27551dfa23ec6", optional = true }

# optional for testint
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs", rev = "8565b7f941e7967778efd39c5ab27551dfa23ec6", optional = true }

fs_extra = { version = "1.3.0", optional = true }
camino-tempfile = { version = "1.0.2", optional = true }
glob = { version = "0.3.1", optional = true }

[workspace]

members = [
    ".",

    # for testing
    "fixtures/*",
]
