[package]
name = "uniffi-dart"
version = "0.1.0"
edition = "2021"
license = "Apache-2 or MIT"
homepage = "https://github.com/acterglobal/uniffi-dart"
description = "Dart Frontend for UniFFI"
rust-version = "1.81"

[features]
defaults = []
binary = []
build = ["dep:uniffi_build"]
bindgen-tests = [
    "dep:uniffi_testing",
    "dep:camino-tempfile",
    "dep:fs_extra",
    "dep:glob",
]

[lib]
name = "uniffi_dart"
path = "src/lib.rs"

[[bin]]
name = "uniffi_bindgen_dart"
path = "src/bin.rs"
required-features = ["binary"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
paste = "1"
heck = "0.5"
uniffi = { workspace = true, features = [
    "build", "tokio"
] }
uniffi_dart_macro = { path = "./uniffi_dart_macro" }
uniffi_bindgen = { workspace = true }
camino = "1"
serde = "1"
toml = "0.5.1"
genco = "0.17.5"
proc-macro2 = "1.0.66"

# feature specific stuff
uniffi_build = { workspace = true, optional = true }

# optional for testint
uniffi_testing = { workspace = true, optional = true }

fs_extra = { version = "1.3.0", optional = true }
camino-tempfile = { version = "1.0.2", optional = true }
glob = { version = "0.3.1", optional = true }
lazy_static = "1.5.0"
stringcase = "0.4.0"

[workspace]

members = [
    ".",

    # for testing
    "fixtures/*", "uniffi_dart_macro",
]
# Ignore a few tests for now
exclude = [
    "fixtures/coverall",
    "fixtures/custom_types",
    "fixtuers/callbacks",
    "fixtuers/dispose",
    "fixtuers/dart_async",
]

[workspace.dependencies]
uniffi = { version = "0.28.0" }
uniffi_bindgen = { version = "0.28.0" }
uniffi_build = { version = "0.28.0" }
uniffi_testing = { version = "0.28.0" }
