[package]
name = "uniffi_dart_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
stringcase = "0.3.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
uniffi = { workspace = true, features = [
    "build",
] }