[package]
name = "coverall"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "coverall"
crate-type = ["lib", "cdylib"]


[dependencies]
once_cell = "1.12"
thiserror = "1.0"
uniffi = { version = "0.24.3", features = [ "build", ] }

[build-dependencies]
uniffi-dart = { path = "../../", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { version = "0.24.3", features = [
  "bindgen-tests",
] }
anyhow = "1"