[package]
name = "custom_error"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "custom_error"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = "0.23.0"
anyhow = "1"

[build-dependencies]
uniffi-dart = { path = "../../",  features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }