[package]
name = "error_types"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "error_types"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true }
uniffi-dart = { path = "../../" }
uniffi_dart_macro = { path = "../../uniffi_dart_macro" }
lazy_static = "1.4.0"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1"
thiserror = "1.0.66"

[build-dependencies]
uniffi-dart = { path = "../../", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = [
  "bindgen-tests",
] }
anyhow = "1"
