[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "uniffi_hello_world"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = "0.23.0"

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
anyhow = "1"